[gd_scene load_steps=9 format=3 uid="uid://doy8ch5n8h1as"]

[ext_resource type="Texture2D" uid="uid://bfys1r18dby86" path="res://images/Javelina eating sprite sheet.png" id="1_ss5id"]
[ext_resource type="Script" path="res://scripts/javelina.gd" id="1_y2lmh"]
[ext_resource type="Texture2D" uid="uid://b6xvd6rk7m34f" path="res://images/Javelina-walk.png" id="2_dxq1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2c7o"]

[sub_resource type="Animation" id="Animation_ukm78"]
resource_name = "eat"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D/Sprite2DIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 1]
}

[sub_resource type="Animation" id="Animation_o510e"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D/Sprite2DIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jw378"]
resource_name = "walk"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D/Sprite2DWalk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 1, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D/Sprite2DWalk:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urj2e"]
_data = {
"eat": SubResource("Animation_ukm78"),
"idle": SubResource("Animation_o510e"),
"walk": SubResource("Animation_jw378")
}

[node name="Javelina" type="Area2D"]
collision_layer = 15
collision_mask = 15
script = ExtResource("1_y2lmh")

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
scale = Vector2(6.6, 6.6)
shape = SubResource("RectangleShape2D_l2c7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(8, 8)
shape = SubResource("RectangleShape2D_l2c7o")

[node name="Sprite2DIdle" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-1.5, 0.625)
scale = Vector2(0.07, 0.07)
texture = ExtResource("1_ss5id")
hframes = 3

[node name="Sprite2DWalk" type="Sprite2D" parent="CollisionShape2D"]
visible = false
position = Vector2(-1.5, 0.625)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_dxq1h")
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_urj2e")
}
autoplay = "idle"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
